Fixed preview changes to JDK19