@@ -39,7 +39,6 @@
                     <configuration>
                         <compilerArgs>
                             <arg>--enable-preview</arg>
-                            <arg>--add-modules=jdk.incubator.foreign</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -64,7 +63,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-install-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.1.0</version>
                     <configuration>
                         <skip>true</skip>
                     </configuration>
@@ -72,7 +71,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <version>3.0.0-M1</version>
+                    <version>3.0.0-M2</version>
                     <configuration>
                         <skip>true</skip>
                     </configuration>
